# entropy-tauri

./: Cargo.toml  GEMINI.md  README.md  styles.css
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: component_browser.rs  mod.rs
